# TradingAgents-CN

./: $null  .dockerignore  .env.docker  .env.example  .gitignore  .last_task_id.txt  .pre-commit-config.yaml  0.5.0  DIFFUSION_INTEGRATION.md  Dockerfile.backend  INTEGRATION_NOTE.md  README.md  TIA_REPORT.md  TIA_REPORT_WS_FIXES.md  _poll_task.ps1  analysis_direct_result.json  analysis_result_sample.json  docker-compose.hub.nginx.arm.yml  docker-compose.hub.nginx.yml  docker-compose.yml  gap-analysis-report.md  hpc_loop_matches.txt  mypy_output_clean.txt  pyproject.toml  rca-v13-verify.txt  redeploy.bat  redeploy.bat.bak.rca-v10-diffusion  redeploy.bat.bak.rca-v11-diffusion  requirements.txt  test_ts.py  test_ts2.py  test_tushare_windows.py  ws_validate.py
analysis_reports/: bug_inventory_full.md  desktop_launcher_analysis.md  final_gate_check.md  final_ultimate_verification.md  final_verification_report.md  fix_cycle2_final.md  fix_round_1_critical_high.md  fix_round_2_medium_low.md  launcher_crash_diagnosis.md  launcher_crash_diagnosis_round2.md  project_structure_analysis.md
app/: __init__.py  __main__.py  main.py  worker.py
app/constants/: model_capabilities.py
app/core/: __init__.py  config.py  config_bridge.py  config_compat.py  database.py  dev_config.py  logging_config.py  logging_context.py  rate_limiter.py  redis_client.py  response.py  startup_validator.py  (+1 more)
cli/: main.py  tushare_init.py  utils.py
docs/: PROJECT_FULL_UNDERSTANDING.md  SILICONFLOW_SETUP_GUIDE.md  TIA_Phase5d-1_20x500_Fixes.md
examples/: batch_analysis.py  cli_demo.py  config_management_demo.py  custom_analysis_demo.py  data_dir_config_demo.py  demo_deepseek_analysis.py  demo_deepseek_simple.py  demo_news_filtering.py  enhanced_history_demo.py  my_stock_analysis.py  run_message_crawlers.py  simple_analysis_demo.py  stock_data_model_usage.py  stock_list_example.py  stock_query_examples.py  test_enhanced_data_integration.py  test_installation.py  test_news_timeout.py  token_tracking_demo.py  tushare_demo.py  tushare_unified_demo.py
frontend/: fix2_remaining.cjs  fix3_el_tag.cjs  fix4_comprehensive.cjs  fix5_regressions.cjs  fix6_comprehensive.cjs  fix7_comprehensive.cjs  fix8_remaining.cjs  fix_remaining_ts.cjs  package.json  ts_errors_raw.txt  ts_final.txt  ts_remaining.txt  vite.config.ts  vue-tsc-errors.txt  vue-tsc-fix8-before.txt  vue-tsc-fix8-result.txt  vue-tsc-non6133.txt
nginx/: nginx.https.conf.example
plans/: _capture_traceback.py  _check_toolkit.py  _traceback_captured.txt  aif-diffusion-timeout-root-cause-fix-20260622.md  akshare-data-pipeline-root-cause-analysis-v1.0.1.md  any-failure-terminate-plan.md  baostock-connect-001-fix-record.md  bug-035-root-cause-fix-report.md  bug-036-root-cause-fix-report.md  bug-new-042-progress-stuck-20pct-root-cause-fix.md  bug-new-044-data-source-timeout-root-cause-fix.md  bug-new-045-zzshare-integration-root-cause-fix.md  bug-stuck-65pct-fundamentals-root-cause-fix.md  config-architecture-review-v1.0.1.md  diffusion-check-v10-20260621.md  final-test-report-v1.0.1-all-phases.md  fix-propagation-import-bug.md  fix6-smart-circuit-breaker.md  fix7-retry-optimization.md  fix8-remove-session-pool.md  fix9-fusion-retry-and-timeout.md  live-error-diagnosis-v3.md  llm-provider-routing-diagnosis.md  phaseB3-tia-cross-round-report-v1.0.1.md  phaseC-final-comprehensive-report-v1.0.1.md  pr1-implementation-plan.md  pr2-contextvar-termination-plan.md  r1-analysis-and-fix-plan.md  r2-analysis-and-fix-plan.md  r3-final-validation-and-plan.md  rca-v13-phase2-scoring.md  round7-tia-final-judgment-v1.0.1.md  server-error-500-root-cause-analysis.md  smoke-test-tia-loop2-report-v1.0.1.md  static-scan-loop1-report-v1.0.1.md  static-scan-loop2-report-v1.0.1.md  structured-code-review-v1.0.1-phase7.md  test-doc-code-review-v1.0.1.md  tia-loop1-report-v1.0.1.md  tushare-connection-fix.md  (+3 more)
scripts/: __init__.py  _credential_helper.py  add_302ai_provider.py  add_baostock_to_db.py  akshare_force_sync_all.py  akshare_sync_optimized.py  analyze_amount_distribution.py  analyze_data_calls.py  batch_update_docs.py  build_docker_with_pdf.py  capture_web_screenshots.py  check_000001_data.py  check_688788_info.py  check_akshare_data_structure.py  check_akshare_fields.py  check_amount_unit.py  check_analysis_reports.py  check_api_config.py  check_config_coverage.py  check_config_reports.py  check_datasource_names.py  check_datasource_priority_simple.py  check_db_data.py  check_doc_consistency.py  check_existing_reports.py  check_export_file.py  check_financial_data.py  check_financial_sample.py  check_financial_structure.py  check_gemini_config.py  check_gemini_provider.py  check_google_llm_attrs.py  check_license.py  check_llm_pricing.py  check_llm_providers.py  check_missing_dependencies.py  check_missing_stocks.py  check_model_config.py  check_mongodb_data_range.py  check_mongodb_financial_data.py  (+266 more)
tests/: _mutant_setup.py__route_aif_observe_9.py  _mutation_405_report.json  _phase7_e2e_report.json  _phase8_llm_mutation_report.json  _phase8_mutation_report.json  _shadow_test_bug018.py  _smoke_test_fix_v1.0.1.py  _v1_0_1_full_regression_test.py  akshare_check_fixed.py  akshare_isolated_test.py  analyze_akshare_data.py  check_key_metrics.py  conftest.py  debug_baostock_fields.py  debug_baostock_stock_list.py  debug_deepseek_cost.py  debug_deepseek_cost_issue.py  debug_full_flow.py  debug_imports.py  debug_test_execution.py  debug_tool_binding_issue.py  debug_web_issue.py  demo_fallback_system.py  final_gemini_test.py  fundamentals_analyst_clean.py  quick_akshare_check.py  quick_redis_test.py  quick_test.py  quick_test_hk.py  simple_akshare_test.py  simple_env_test.py  test_000002_valuation.py  test_002027_specific.py  test_aihubmix_model_filters.py  test_all_analysts_hk_fix.py  test_all_apis.py  test_amount_fix.py  test_amplitude_api.py  test_analysis_result.py  test_analysis_with_apis.py  (+182 more)
tradingagents/: __init__.py  default_config.py
utils/: check_version_consistency.py  cleanup_unnecessary_dirs.py  data_config.py  update_data_source_references.py
web/: app.py  run_web.py
(+539 files in other folders)
